# python-uv-google-cloud-bigquery

./: main.py  pyproject.toml
